change the escapeHtml func a bit

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -12,12 +12,12 @@
   <script src="/js/purify.min.js"></script>
   <script type="text/javascript">
     function escapeHtml(unsafe) {
-      return unsafe
-           .replace(/&/g, "&amp;")
-           .replace(/</g, "&lt;")
-           .replace(/>/g, "&gt;")
-           .replace(/"/g, "&quot;")
-           .replace(/'/g, "&#039;");
+      return (unsafe || "")
+        .replace(/&/g, "&amp;")
+        .replace(/</g, "&lt;")
+        .replace(/>/g, "&gt;")
+        .replace(/"/g, "&quot;")
+        .replace(/'/g, "&#039;");
     }
     function emojify(input, emojis) {
       let output = input;
