--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -6,7 +6,7 @@
     <noscript><p>Loading comments relies on JavaScript. Try enabling JavaScript and reloading, or visit <a href="https://{{ .host }}/post/{{ .id }}">the original post</a> on Mastodon.</p></noscript>
   </div>
   <noscript>You need JavaScript to view the comments.</noscript>
-  <script>
+  <script type="text/javascript">
     let the_protocol = window.location.protocol;
     let my_url;
     
