enclose in quotes

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -16,7 +16,7 @@
       my_url = "http://" + "{{ .hostonion }}";
     }
   </script>
-  <p>With an account on the Fediverse or Mastodon, you can respond to this <a href=my_url + "/post/{{ .id }}">post</a>. Since Mastodon is decentralized, you can use your existing account hosted by another Mastodon server or compatible platform if you don't have an account on this one. Known non-private replies are displayed below.</p>
+  <p>With an account on the Fediverse or Mastodon, you can respond to this <a href="my_url" + "/post/{{ .id }}">post</a>. Since Mastodon is decentralized, you can use your existing account hosted by another Mastodon server or compatible platform if you don't have an account on this one. Known non-private replies are displayed below.</p>
 
   <script src="/js/purify.min.js"></script>
   <script type="text/javascript">
