--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,23 +1,14 @@
 {{ with .Params.comments }}
 <section id="comments" class="article-content">
   <h2>Comments</h2>
+  <p>With an account on the Fediverse or Mastodon, you can respond to this <a href="https://{{ .host }}/post/{{ .id }}">post</a>. Since Mastodon is decentralized, you can use your existing account hosted by another Mastodon server or compatible platform if you don't have an account on this one. Known non-private replies are displayed below.</p>
+  <p>Learn how this is implemented <a class="link" href="/2020/12/29/adding-comments-to-your-static-blog-with-mastodon/">here.</a></p>
+
   <p id="mastodon-comments-list"><button id="load-comment">Load comments</button></p>
   <div id="comments-wrapper">
     <noscript><p>Loading comments relies on JavaScript. Try enabling JavaScript and reloading, or visit <a href="https://{{ .host }}/post/{{ .id }}">the original post</a> on Mastodon.</p></noscript>
   </div>
   <noscript>You need JavaScript to view the comments.</noscript>
-  <script type="text/javascript">
-    let the_protocol = window.location.protocol;
-    let my_url;
-    
-    if (the_protocol === "https:") {
-      my_url = "https://" + "{{ .host }}";
-    } else if (the_protocol === "http:") {
-      my_url = "http://" + "{{ .hostonion }}";
-    }
-  </script>
-  <p>With an account on the Fediverse or Mastodon, you can respond to this <a href="my_url" + "/post/{{ .id }}">post</a>. Since Mastodon is decentralized, you can use your existing account hosted by another Mastodon server or compatible platform if you don't have an account on this one. Known non-private replies are displayed below.</p>
-
   <script src="/js/purify.min.js"></script>
   <script type="text/javascript">
     function escapeHtml(unsafe) {
@@ -58,7 +49,17 @@
     function loadComments() {
       let commentsWrapper = document.getElementById("comments-wrapper");
       document.getElementById("load-comment").innerHTML = "Loading";
-      fetch(my_url + '/api/v1/statuses/{{ .id }}/context')
+
+      let protocol = window.location.protocol;
+      let url;
+      
+      if (protocol === "https:") {
+        url = "https://" + "{{ .host }}";
+      } else if (protocol === "http:") {
+        url = "http://" + "{{ .hostonion }}";
+      }
+
+      fetch(url + '/api/v1/statuses/{{ .id }}/context')
         .then(function(response) {
           return response.json();
         })
@@ -195,9 +196,7 @@
           }
         });
       }
-      if (the_protocol === "https:") {
-        document.getElementById("load-comment").addEventListener("click", loadComments);
-      }
+      document.getElementById("load-comment").addEventListener("click", loadComments);
   </script>
 </section>
 {{ end }}
