change the class

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 {{ with .Params.comments }}
-<section id="comments" class="article-content">
+<section id="comments" class="mastodon-comment">
   <h2>Comments</h2>
   <p>Leave a comment from the fediverse by responding to this <a id="post-link" href="#">post</a>.</p>
   <!-- Determine if the visitor is coming from the onion URL or the clearnet one -->
