chang url into uri

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -138,7 +138,7 @@
               header.appendChild(instanceBadge);
 
               let permalink = document.createElement("a");
-              permalink.setAttribute("href", status.url);
+              permalink.setAttribute("href", status.uri);
               permalink.setAttribute("itemprop", "url");
               permalink.setAttribute("title", `View comment at ${ instance }`);
               permalink.setAttribute("rel", "external nofollow");
