--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,9 +1,9 @@
 <section class="article-meta article-footer">
   <h3>{{ "If you enjoyed the post..." }}</h3>
   <h4>{{ "...take a direct economical action:" }}</h4>
-  <p>XMR: <pre><code>888wiqtx1QzSGxBn3zBpJtDcgwGCr8SzEYWx9W3oJAYaJ9HGL4A8stUbRZRnaA3snzYL2xkezgehaBMmmiuf6sPPE3KNv3v</pre></code></p>
+  <p>XMR: <pre><code>{{ .Params.donations.address }}</pre></code></p>
   <section class="article-meta">
-  {{ $imagexmr := resources.Get "images/k4r4b3y_xmr_addy.png" }}
+  {{ $imagexmr := resources.Get (printf "post/%s/%s" .Dir .Params.donations.qr-code) }}
   {{ $imagexmr := $imagexmr.Resize "150x150 WebP" }}
   <img style="position: left" src="{{ $imagexmr.RelPermalink }}" />
   </section>
