--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -3,7 +3,7 @@
   <h4>{{ "...take a direct economical action:" }}</h4>
   <p>XMR: <pre><code>{{ .Params.donations.address }}</pre></code></p>
   <section class="article-meta">
-  {{ $imagexmr := resources.Get (printf "post/%s/%s" .Dir .Params.donations.qr-code) }}
+  {{ $imagexmr := resources.Get (printf "post/%s/%s" .Dir .Params.donations.qrcode) }}
   {{ $imagexmr := $imagexmr.Resize "150x150 WebP" }}
   <img style="position: left" src="{{ $imagexmr.RelPermalink }}" />
   </section>
