remove the problem dash

--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -3,7 +3,7 @@
   <h4>{{ "...take a direct economical action:" }}</h4>
   <p>XMR: <pre><code>{{ .Params.donations.address }}</pre></code></p>
   <section class="article-meta">
-  {{ with .Page.Resources.GetMatch .Params.donations.qr-code }}
+  {{ with .Page.Resources.GetMatch .Params.donations.qrcode }}
     {{ $imagexmr := .Resize "150x150 WebP" }}
     <img style="position: left" src="{{ $imagexmr.RelPermalink }}" />
   {{ else }}
